--- a/validator/templates/validator/published_results.html
+++ b/validator/templates/validator/published_results.html
@@ -54,9 +54,9 @@
                                 <a class="btn btn-sm btn-primary btn-action" href="{% url 'result' valrun.id %}" title="View results"><span class="fas fa-folder-open"></span></a>
                                 {% if current_user %}
                                     {% if valrun not in copied_runs %}
-                                        <button class="btn btn-sm btn-primary btn-action" title="Attach this validation to your list" onclick="ajax_copy_validation('{{ valrun.id}}')"><span class="fas fa-plus"></span></button>
+                                        <button class="btn btn-sm btn-primary btn-action" title="Attach this validation to your list" onclick="ajax_attach_validation('{{ valrun.id}}')"><span class="fas fa-plus"></span></button>
                                     {% else %}
-                                        <button class="btn btn-sm btn-primary btn-action" title="Detach this validation from your list" onclick="ajax_remove_copied_validation('{{ valrun.id }}', false)"><span class="fas fa-times"></span></button>
+                                        <button class="btn btn-sm btn-primary btn-action" title="Detach this validation from your list" onclick="ajax_detach_validation('{{ valrun.id }}', false)"><span class="fas fa-times"></span></button>
                                     {% endif %}
                                 {% endif %}
                             </div>
