also remember version and variable; tests

--- a/validator/templates/validator/validate.html
+++ b/validator/templates/validator/validate.html
@@ -674,12 +674,16 @@
             var filterWidgetId = widgetId.replace(/dataset$/, "filters");
             var paramFilterWidgetId = widgetId.replace(/dataset$/, "parametrised_filters");
 	    var initialFilters = event.data.initialFilters;
+            var initialVersion = event.data.initialVersion;
+            var initialVariable = event.data.initialVariable;
             $.ajax({
                 url: url,
                 data: { 'dataset_id': datasetId,
 			'filter_widget_id': filterWidgetId,
 			'param_filter_widget_id': paramFilterWidgetId,
-		        'initial_filters': initialFilters },
+		        'initial_filters': initialFilters,
+		        'initial_version': initialVersion,
+		        'initial_variable': initialVariable },
                 success: function (return_data) {
                     var dataset_widget = "#" + widgetId;
                     var version_widget = dataset_widget.replace(/dataset$/, "version");
@@ -715,7 +719,9 @@
 
         {% for dc_form in dc_formset.forms %}
             $("#{{ dc_form.dataset.auto_id }}").change(
-                {initialFilters: "{{ dc_form.initial_filters }}"}, ajax_change_dataset
+                {initialFilters: "{{ dc_form.initial_filters }}",
+                 initialVersion: "{{ dc_form.initial_version }}",
+                 initialVariable: "{{ dc_form.initial_variable}}"}, ajax_change_dataset
             ).change(change_tab_name).change(); // last change() to call change on pageload
         {% endfor %}
 
@@ -733,7 +739,9 @@
 
 
         $("#{{ ref_dc_form.dataset.auto_id }}").change(
-            {initialFilters: "{{ ref_dc_form.initial_filters }}" }, ajax_change_dataset
+            {initialFilters: "{{ ref_dc_form.initial_filters }}",
+             initialVersion: "{{ ref_dc_form.initial_version }}",
+             initialVariable: "{{ ref_dc_form.initial_variable }}" }, ajax_change_dataset
         ).change(); // last change() to call change on pageload
         $('#id_ref-version').change(get_version_id)
 
