--- a/validator/templates/validator/user_runs.html
+++ b/validator/templates/validator/user_runs.html
@@ -4,13 +4,13 @@
 {% block content %}
 
 <div class="container">
-    {% if copied_runs|length != 0 %}
+    {% if tracked_runs|length != 0 %}
       <div class="container text-center mb-5 mt-4" style="max-width: 40rem;">
           <h1 class="jumbotron-heading">Attached validations</h1>
       </div>
       <div class="card-deck mb-3">
               <div class="col">
-                {% for valrun in copied_runs %}
+                {% for valrun in tracked_runs %}
                     <div class="mx-0" id="attached_result_row_{{ valrun.id }}">
                         <div class="card-header att_val_container">
                             <h5 class="my-0"><span class="font-weight-normal"><b>Validation:</b></span> {{ valrun.name_tag }}</h5>
