original time passed for copied non-published validations

--- a/validator/templates/validator/result.html
+++ b/validator/templates/validator/result.html
@@ -39,7 +39,12 @@
                 </div>
                 <div class="card-body">
                     <ul>
+                        {% if is_copied and val.doi == '' %}
+                        <li>Validation has been copied on {{ val.start_time }}.</li>
+                        <li>Started validation on {{ original_start }}, finished on {{ original_end }}.</li>
+                        {% else %}
                         <li>Started validation on {{ val.start_time }}, finished on {{ val.end_time }}.</li>
+                        {%endif%}
                         <li>Compared {{ val.dataset_configurations.count }} datasets:
                             <ul>
                                 {% for dc in val.dataset_configurations.all %}
