--- a/validator/templates/validator/result.html
+++ b/validator/templates/validator/result.html
@@ -150,7 +150,7 @@
                     </ul>
 
                     {% if is_owner and val.is_unpublished %}
-                        <div style="float: right;" class="patchButtonGroup{% if val.publishing_in_progress %} collapse {% endif %}">
+                        <div style="float: right" class="patchButtonGroup{% if val.publishing_in_progress %} collapse {% endif %}">
                             <button class="btn btn-sm btn-primary" title="Remove result" onclick="ajax_delete_result('{{ val.id }}', true)"><span class="fas fa-times"></span> Remove</button>
                             {% if val.is_archived %}
                                 <button class="btn btn-sm btn-primary" title="Un-archive" onclick="ajax_archive_result('{{ val.id }}', false)"><span class="fas fa-calendar-alt"></span> Un-archive</button>
@@ -163,6 +163,7 @@
                                     <span class="fas fa-book" ></span> Publish
                                 </button>
                             {% endif %}
+                            <a class="btn btn-sm btn-primary" title="Load settings" href="{% url 'validation' %}?valrun_uuid={{ val.id }}"><span class="fas fa-redo"></span> Load settings</a>
                         </div>
                         {% if val.output_file %}
                             <div class="publishingNote small text-muted {% if not val.publishing_in_progress %} collapse {% endif %}" style="float: right">
