--- a/validator/templates/validator/user_runs.html
+++ b/validator/templates/validator/user_runs.html
@@ -8,7 +8,7 @@
 
     {% if tracked_runs|length != 0 %}
       <div class="container text-center mb-5 mt-4" style="max-width: 40rem;">
-          <h1 class="jumbotron-heading">Attached validations</h1>
+          <h1 class="jumbotron-heading">Tracked validations</h1>
       </div>
       <div class="card-deck mb-3">
               <div class="col">
