--- a/validator/templates/validator/result.html
+++ b/validator/templates/validator/result.html
@@ -177,6 +177,60 @@
     </div>
 
     {% if val.output_file %}
+    <div class="container">
+            <div class="card-deck">
+                <div id="stats_accordion" style="width:100%">
+                    <div class="card mb-4 center-text">
+                        <div class="card-header" id="stats_header">
+                            <h4 class="my-0 font-weight-normal">Summary statistics</h4>
+                            <div class="card-menu">
+                                <span class="input-group-text fas fa-question-circle help-icon" title="Expand this section to inspect a table of statistics of the validation results for each metric."></span>
+                                <a class="input-group-text" data-toggle="collapse" href="#stats_collapse" role="button" aria-expanded="false" aria-controls="stats_collapse">
+                                    <span class="fa fa-plus-circle" title="Expand"></span>
+                                    <span class="fa fa-minus-circle" title="Collapse"></span>
+                                </a>
+                            </div>
+                        </div>
+                        <div id="stats_collapse" class="collapse" aria-labelledby="stats_header" data-parent="#stats_accordion">
+                            <div class="card-body">
+                                <p>The following table aggregates the validation results by mean, median and standard deviation. </p>
+                                <div class="card-body">
+                                    <div style="width: 100%; margin: auto; max-width: 85rem;">
+                                            <table id="inspection_table" class="table table-bordered table-striped">
+                                                <thead class="thead-dark">
+                                                    <tr>
+                                                        <th scope="col">Metric</th>
+                                                        {% for column_name in inspection_table.columns %}
+                                                                <th scope="col">{{ column_name }}</th>
+                                                        {% endfor %}
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    {% for row_hd, row_values in inspection_table.iterrows %}
+                                                            <tr>
+                                                                <th scope="row">{{row_hd}}</th>
+                                                                    {% for metric in row_values %}
+                                                                        <td>{{metric}}</td>
+                                                                    {% endfor %}
+                                                                </th>
+                                                            </tr>
+                                                    {% endfor %}
+                                                </tbody>
+                                            </table>
+                                    </div>
+
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <button type="button" style="width: 10rem;" class="btn btn-sm btn-primary" title="Download the table to a .csv file" onclick= exportTableToCSV('Stats_summary.csv')><span class="fas fa-file-download"></span>Download .csv</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        
+                    </div>
+                </div>
+            </div>
+        </div>
+        
         <div class="container">
             <div class="card-deck">
                 <div id="result_files" class="card mb-4 box-shadow">
