Fixed bug in validation page
A problem occurred as the inspection table function was called before the output results were ready, leading to an error in the validation run page. Small typo fixed in results table

--- a/validator/templates/validator/result.html
+++ b/validator/templates/validator/result.html
@@ -220,7 +220,7 @@
                                     </div>
 
                                     <div class="d-flex justify-content-between align-items-center">
-                                        <button type="button" style="width: 10rem;" class="btn btn-sm btn-primary" title="Download the table to a .csv file" onclick= exportTableToCSV('Stats_summary.csv')><span class="fas fa-file-download"></span>Download .csv</button>
+                                        <button type="button" style="width: 10rem;" class="btn btn-sm btn-primary" title="Download the table to a .csv file" onclick= exportTableToCSV('Stats_summary.csv')><span class="fas fa-file-download"></span> Download .csv table</button>
                                     </div>
                                 </div>
                             </div>
