--- a/validator/templates/validator/result.html
+++ b/validator/templates/validator/result.html
@@ -359,6 +359,10 @@
     changeOverviewMap()
 </script>
 
+<script type="text/javascript" id="MathJax-script" async
+src="https://cdn.jsdelivr.net/npm/mathjax@3.0.0/es5/tex-mml-chtml.js">
+</script>
+
 <script type="text/javascript">
     csrf_token = '{{csrf_token}}';
     result_list_url = "{% url 'myruns' %}";
