--- a/validator/templates/validator/result.html
+++ b/validator/templates/validator/result.html
@@ -357,6 +357,35 @@
     // update the plots once the page loads
     changeBoxplot()
     changeOverviewMap()
+    
+    function downloadCSV(csv, filename) {
+    var csvFile;
+    var downloadLink;
+
+    csvFile = new Blob([csv], {type: "text/csv"});
+    downloadLink = document.createElement("a");
+    downloadLink.download = filename;
+    downloadLink.href = window.URL.createObjectURL(csvFile);
+    downloadLink.style.display = "none";
+    document.body.appendChild(downloadLink);
+    downloadLink.click();
+    }
+    
+    function exportTableToCSV(filename) {
+    var csv = [];
+    var rows = document.querySelectorAll("table tr");
+    
+    for (var i = 0; i < rows.length; i++) {
+        var row = [], cols = rows[i].querySelectorAll("td, th");
+        
+        for (var j = 0; j < cols.length; j++) 
+            row.push(cols[j].innerText);
+        
+        csv.push(row.join(","));        
+    }
+    downloadCSV(csv.join("\n"), filename);
+    }
+    
 </script>
 
 <script type="text/javascript" id="MathJax-script" async
