--- a/UI/src/app/app.component.html
+++ b/UI/src/app/app.component.html
@@ -1,9 +1,3 @@
-<div class="p-grid">
-  <div class="p-col-12">
-    <p-menubar [model]="items">
-      <div class="p-d-inline-flex">QA4SM Validation Service</div>
-    </p-menubar>
-  </div>
-</div>
+<navigation-bar></navigation-bar>
 
 <router-outlet></router-outlet>
