--- a/UI/src/app/pages/home/home.component.html
+++ b/UI/src/app/pages/home/home.component.html
@@ -1,5 +1,19 @@
-<p-carousel [value]="landingPageImages" [numVisible]="1" [numScroll]="1" [autoplayInterval]="3000" [circular]="true">
-  <ng-template let-image pTemplate="item">
-    <img src="{{image}}" class="product-image"/>
-  </ng-template>
-</p-carousel>
+<div class="p-grid">
+  <div class="p-col-12">
+    <p-carousel [value]="landingPageImages"  [circular]="true" [autoplayInterval]="3000">
+      <ng-template let-image pTemplate="item">
+        <img style="max-width:100%;max-height:100%;" src="{{image}}" />
+      </ng-template>
+    </p-carousel>
+  </div>
+  <div class="p-col-12">
+    <div class="p-d-flex p-jc-center ">
+      <p-button label="Sign up" styleClass="p-mr-2 "></p-button>
+      <p-button label="Log in" styleClass="p-mr-2 "></p-button>
+
+    </div>
+  </div>
+
+</div>
+
+
