--- a/UI/src/app/modules/login/login/login.component.html
+++ b/UI/src/app/modules/login/login/login.component.html
@@ -1,1 +1,3 @@
-<p>login works!</p>
+<p>logssin works!</p>
+<p-button (onClick)="loginClick()" label="Nyaloka" ></p-button>
+<p-button label="Click" icon="pi pi-check" iconPos="left"></p-button>
