implemented authentication service and login component

--- a/UI/src/app/app.component.html
+++ b/UI/src/app/app.component.html
@@ -1,3 +1,12 @@
-<navigation-bar></navigation-bar>
+<div class="p-grid">
+  <div class="p-col-12">
+    <navigation-bar></navigation-bar>
+  </div>
+  <div class="p-col-12">
+    <router-outlet></router-outlet>
+  </div>
+</div>
 
-<router-outlet></router-outlet>
+
+
+
