--- a/UI/src/app/pages/validation/validation.component.html
+++ b/UI/src/app/pages/validation/validation.component.html
@@ -1,2 +1,2 @@
 <p>validation works!</p>
-<input id="float-input" type="text" pInputText [(ngModel)]="validationId" readonly="true">
+<!--<input id="float-input" type="text" pInputText [(ngModel)]="validationId" readonly="true">-->
